force-app/main/default/objects/Message_Log__c/Message_Log__c.object-meta.xml
<CustomObject>
    <description>Delivery ledger. Records THAT we tried to reach someone and whether it worked. Never records what they said, and never the raw address. CONTAINS NO MESSAGE CONTENT BY DESIGN.</description>
    <label>Message Log</label>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>ML-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Message Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>