force-app/main/default/objects/Message_Log__c/fields/Attempted_At__c.field-meta.xml
<CustomField>
    <fullName>Attempted_At__c</fullName>
    <description>When the send was attempted.</description>
    <inlineHelpText>When we tried. Note this is the attempt, not the arrival; the gap between those two is where people disappear.</inlineHelpText>
    <label>Attempted At</label>
    <type>DateTime</type>
</CustomField>