force-app/main/default/objects/Message_Log__c/fields/Barrier_Report__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Report__c</fullName>
    <label>Barrier Report</label>
    <type>Lookup</type>
    <referenceTo>Barrier_Report__c</referenceTo>
    <relationshipName>Message_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>