force-app/main/default/objects/Message_Log__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Voice</fullName><default>false</default><label>Voice</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>