force-app/main/default/objects/Message_Log__c/fields/Daily_Quota_Used__c.field-meta.xml
<CustomField>
    <fullName>Daily_Quota_Used__c</fullName>
    <label>Txn Emails Used</label>
    <type>Number</type><precision>6</precision><scale>0</scale>
    <description>Emails sent in THIS transaction, from Limits.getEmailInvocations(). Apex cannot read the org daily cap; that is only visible from the REST limits endpoint as SingleEmail. Do not read this as a daily figure.</description>
</CustomField>