force-app/main/default/objects/Message_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <inlineHelpText>What happened to the send. Never what the message said. The fact of the contact is operational; the content of it is theirs.</inlineHelpText>
    <label>Detail</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines>
    <description>Platform error text only. Never any part of what the person wrote.</description>
</CustomField>