force-app/main/default/objects/Message_Log__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Inbound from the person, or outbound to them.</description>
    <inlineHelpText>Inbound is them reaching us. Outbound is us reaching them, and only ever as a reply to something they sent.</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
            <value><fullName>Outbound</fullName><default>true</default><label>Outbound</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>