force-app/main/default/objects/Message_Log__c/fields/Recipient_Hash__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Hash__c</fullName>
    <inlineHelpText>A one-way salted hash, never an address or a number. This log must never become a contact list.</inlineHelpText>
    <label>Recipient (hashed)</label>
    <type>Text</type><length>64</length>
    <description>Salted hash. The raw address or number is never stored, here or anywhere.</description>
</CustomField>