force-app/main/default/objects/Message_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Accepted means the platform took it, which is not the same as it arriving. Anything other than Accepted is a person who heard nothing back.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <description>Accepted means the platform took it. That is not the same as delivered, and the difference is where a person disappears.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Accepted</fullName><default>true</default><label>Accepted by platform</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Escalated</fullName><default>false</default><label>Escalated to a person</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>