force-app/main/default/objects/Message_Log__c/listViews/All_Messages.listView-meta.xml
<ListView>
    <fullName>All_Messages</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Direction__c</columns>
    <columns>Status__c</columns>
    <columns>Attempted_At__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All messages</label>
</ListView>