force-app/main/default/objects/Message_Log__c/listViews/Did_Not_Reach_Them.listView-meta.xml
<ListView>
    <fullName>Did_Not_Reach_Them</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>Attempted_At__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Accepted</value>
    </filters>
    <label>Did not reach them</label>
</ListView>