force-app/main/default/objects/Message_Log__c/listViews/Handed_To_A_Person.listView-meta.xml
<ListView>
    <fullName>Handed_To_A_Person</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Attempted_At__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </filters>
    <label>Handed to a person</label>
</ListView>