force-app/main/default/objects/Message_Log__c/listViews/Reached_Them.listView-meta.xml
<ListView>
    <fullName>Reached_Them</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>Attempted_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted by the platform</label>
</ListView>